@@ -15,11 +15,6 @@ const SEARCH_TRACKS_CAT = 4;
 const SEARCH_PLAYLISTS_CAT = 5;
 const SEARCH_OTHER_CAT = 6;
 
-function searchTrackSort(a, b) {
-    let res = fixedSort(undefined==a.plainTitle ? a.title : a.plainTitle, undefined==b.plainTitle ? b.title : b.plainTitle);
-    return 0==res ? fixedSort(a.title, b.title) : res;
-}
-
 function buildSearchResp(results) {
     let items=[];
     let total=0;
@@ -210,7 +205,6 @@ Vue.component('lms-search-field', {
                             }
                         }
                         if (resp.items.length>0) {
-                            resp.items.sort(SEARCH_TRACKS_CAT==command.cat ? searchTrackSort : titleSort);
                             this.results.push({command:command, params:command.params, resp:resp});
                         }
                         this.doSearch();
