@@ -1,6 +1,7 @@
 5.11.4
 ------
 1. Fix listing random mixes on macOS - thanks to EelcoV.
+2. Don't sort search results, use order as supplied from LMS.
 
 5.11.3
 ------
